# for display continuity sake please use 2 spaces instead of tabs

2012-01-22 Matthias Scholz <ms@jammerhund.de>
  * SuperZoomPanTool:
    - some fixes
    - I18N
	- Icon and cursor
  * JUMPConfiguration
    - SuperZoomPanTool activated for testing

2012-01-21 mmichaud <michael.michaud@free.fr>
  * Fixed I18N.getMessage() method

2012-01-19 Matthias Scholz <ms@jammerhund.de>
  * AbstractCursorTool.getGraphics2D()
    Small fix/workaround for the Linux painting/ screen refresh problem during
    Shape movement.

2012-01-15 mmichaud <michael.michaud@free.fr>
    * Optimization of DeleteDuplicateItemsPlugIn + unit test
    * added a unit-test target in ant build file
      
2012-01-14 mmichaud <michael.michaud@free.fr>
    * Fix two small language issues in 
      ReplicateSelectedItemsPlugIn and CreateThiessenPolygonsPlugIn
      
2012-01-13 benjamin gudehus
    * added a unit test framework made of
      - org.openjump.test package
      - fixtures directory for datasets

2012-01-11 mmichaud <michael.michaud@free.fr>
    * Fixed bugs in
      - ClipToFencePlugIn [3472008] two identical attribute names not accepted.
        now throw a clearer message
      - CombineSelectedLayer now accept non-default geometry attribute names

2012-01-07 mmichaud <michael.michaud@free.fr>
    * Prepare 1.5 release (svn 2588)

2012-01-05 mmichaud <michael.michaud@free.fr>
    * Makes RemoveSelectedLayer more consistent and fix bug 3469215
      Now, a LayerEventType.REMOVED is listened by :
      - ViewAttributesPlugIn.ViewAttributesFrame which is also removed
      - InfoFrame which removes data from this layer from the model
      - LayerViewPanel which removes this layer renderer

2012-01-03 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
    * Add Clone Item PlugInto right click context mouse menu, add language strings to Clone Item PlugIn
    * Changed position within right click context menu to Copy This Coordinate PlugIn